--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ authors = ["Guillaume Charbonnier <gu.charbon@gmail.com>"]
 python = ">=3.8,<=3.10"
 fastapi = "^0.75.1"
 uvicorn = "^0.17.6"
+structlog = "^21.5.0"
+httpx = "^0.22.0"
+PyJWT = "^2.3.0"
+cryptography = "^36.0.2"
 flake8 = { version = "^4.0.1", optional = true }
 black = { version = "^22.3.0", optional = true }
 isort = { version = "^5.10.1", optional = true }
@@ -16,7 +20,7 @@ types-setuptools = { version = "^57.4.12", optional = true }
 prometheus-fastapi-instrumentator = { version = "^5.7.1", optional = true }
 opentelemetry-instrumentation-fastapi = { version = "^0.29-beta.0", optional = true }
 opentelemetry-sdk = { version = "^1.10.0", optional = true }
-opentelemetry-exporter-otlp-proto-http = { version = "^1.10.0", optional = true }
+opentelemetry-exporter-otlp-proto-grpc = { version = "^1.10.0", optional = true }
 
 [tool.poetry.extras]
 dev = ["flake8", "black", "isort", "mypy", "types-setuptools"]
